tests/script_errors/string_interpolation_escape/error.txt
Error: 
    1 | let escape = " #{ "\z" } ";
      |                    ^^ An unexpected escape code 'z' was found